# panflute

./: .gitignore  .travis.yml  CONTRIBUTING.md  DISTRIBUTION.md  DOCUMENTATION.md  LICENSE  README.md  README.original.md  TODO.md  documentation.html  example.py  pyproject.toml  removed.md  requirements.txt  setup.py
.github/workflows/: force-publish.yml  main.yml  pandoc_url.py  publish.yml  run_tests.yml
docs/: Makefile  help.txt  howtobuild.txt  make.bat
docs/source/: about.rst  code.rst  conf.py  csv-tables.py  emph-last-row.py  emph2strikeout.py  example.html  fenced-template.py  guide.rst  header-level-1.py  include.py  index.rst  install.rst  move-tables.py  remove-tables.py  template.py  toc.py  wiki.py
examples/: benchmark_output.html  commands.txt  headers.html  make.py  panflute_output.html
examples/advanced/: advanced.md
examples/input/: build-table-sample.md  caps-sample.md  comments-sample.md  deemph-sample.md  deflists-sample.md  graphviz-sample.md  headers.md  heavy_metadata.md  (+6 more)
extra/: panflute-fenced.sublime-snippet  panflute.sublime-snippet
misc/: CLI_Wrapper.md
panflute/: __init__.py  autofilter.py  base.py  borrar.txt  containers.py  elements.py  figure.py  io.py  pandoc.json  pathworker.py  simple.py  table_elements.py  tools.py  utils.py  version.py
tests/: README.md  borrar.md  example.bib  example.json  example.md  md2json.txt  output_pandoc.json  pandoc.json  pandoc.md  quick.py  requirements.txt  run_tests.py  temp_benchmark.txt  temp_panflute.txt  test_basics.py  test_context_import.py  test_convert_text.py  test_elements.py  test_env.py  test_equality.py  test_examples_run.py  test_fenced.py  test_get_metadata.py  test_get_option.py  test_get_variable.py  test_panfl.py  test_regressions.py  test_standalone.py  test_stringify.py  test_walk.py
(+78 files in other folders)
