[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["panflute"]

[project]
name = "panflute"
dynamic = ["version"]
description = "Pythonic Pandoc filters"
readme = "README.md"
authors = [{name = "Sergio Correia", email = "serio.correia@gmail.com"}]
license = {text = "BDS3"}
requires-python = ">=3.7"
keywords = ["pandoc", "pandocfilters", "markdown", "latex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "click>=6,<9",
    "pyyaml>=3,<7"
]

[project.urls]
homepage = "https://github.com/sergiocorreia/panflute"

[project.optional-dependencies]
dev = [
    "configparser",
    "coverage",
    "flake8",
    "pandocfilters",
    "pytest-cov",
    "pytest",
    "requests"
]
pypi = [
    "build",
    "docutils",
    "Pygments",
    "twine",
    "wheel"
]
extras = [
    "yamlloader>=1,<2"
]

[project.scripts]
panflute = "panflute:main"
panfl = "panflute:panfl"

[tool.setuptools.dynamic]
version = {attr = "panflute.version.__version__"}
